--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1575,8 +1575,8 @@
             "Comercialização de Materiais Recicláveis",
             "Outras Receitas",
             "Prestação de Serviços e Parcerias",
-            "Gestão Associativa",
-            "Gestão Administrativa e Financeira"
+            "Gestão Associativa"
+            
 
 
         ],
@@ -3434,8 +3434,8 @@ function buscarTransacoesGestao() {
             "Comercialização de Materiais Recicláveis",
             "Outras Receitas",
             "Prestação de Serviços e Parcerias",
-            "Gestão Associativa",
-            "Gestão Administrativa e Financeira"
+            "Gestão Associativa"
+            
 
         ],
         "Despesa": [
