exclusão gestão financeira das receitas

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1584,7 +1584,7 @@
             "Operação e Produção",
             "Gestão Administrativa e Financeira",
             "Despesas de manutenção",
-            "Rateio dos Associados",
+            "Rateio dos Associados"
         ]
     };
 
